trying to fix blue button text on ios browser

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,12 +20,17 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  position: relative;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 1rem 0.5rem;
   font-weight: 400;
   font-family: 'Inter';
+  color: var(--main-color);
 }
 
 h1 {
@@ -90,30 +95,3 @@ p {
     display: none;
   }
 }
-
-/* a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-} */
